--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,6 +28,8 @@
     "test:watch": "jest --watch",
     "doc": "compodoc -p tsconfig.json -s",
     "gen-env-types": "npx tsx scripts/genEnvTypes.ts || true",
+    "lint": "eslint . --ext .js,.ts",
+    "lint:fix": "eslint . --ext .js,.ts --fix",
     "typeorm": "cross-env NODE_ENV=development typeorm-ts-node-esm -d ./dist/config/database.config.js",
     "typeorm:docker": "cross-env NODE_ENV=development typeorm-ts-node-esm -d ./dist/config/database.config.js",
     "migration:create": "npm run typeorm migration:create ./src/migrations/initData",
@@ -114,6 +116,7 @@
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.26",
+    "@eslint/js": "^9.34.0",
     "@nestjs/cli": "^11.0.6",
     "@nestjs/schematics": "^11.0.3",
     "@nestjs/testing": "^11.0.13",
@@ -126,6 +129,9 @@
     "@types/qs": "^6.9.18",
     "@types/supertest": "^6.0.3",
     "@types/ua-parser-js": "^0.7.39",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
+    "eslint": "^9.34.0",
     "jest": "^29.7.0",
     "rimraf": "^6.0.1",
     "source-map-support": "^0.5.21",
