--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -39,6 +39,8 @@
     "dev": "vite --mode test",
     "dev:prod": "vite --mode prod",
     "gen-route": "sa gen-route",
+    "lint": "eslint . --ext .vue,.js,.ts",
+    "lint:fix": "eslint . --ext .vue,.js,.ts --fix",
     "prepare": "simple-git-hooks",
     "preview": "vite preview",
     "release": "sa release",
@@ -73,11 +75,14 @@
   },
   "devDependencies": {
     "@elegant-router/vue": "0.3.8",
+    "@eslint/js": "^9.34.0",
     "@iconify/json": "2.2.357",
     "@sa/scripts": "workspace:*",
     "@sa/uno-preset": "workspace:*",
     "@types/node": "24.0.13",
     "@types/nprogress": "0.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
     "@unocss/preset-icons": "66.3.3",
     "@unocss/preset-uno": "66.3.3",
     "@unocss/transformer-directives": "66.3.3",
@@ -86,6 +91,8 @@
     "@vitejs/plugin-vue": "6.0.0",
     "@vitejs/plugin-vue-jsx": "5.0.1",
     "consola": "3.4.2",
+    "eslint": "^9.34.0",
+    "eslint-plugin-vue": "^10.4.0",
     "kolorist": "1.8.0",
     "sass": "1.89.2",
     "simple-git-hooks": "2.13.0",
