chore: remove unnecessary files

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -7,6 +7,8 @@
     "experimentalDecorators": true,
     "baseUrl": "./",
     "module": "commonjs",
+    "moduleResolution": "node10",
+    "ignoreDeprecations": "5.0",
     "paths": {
       "~/*": ["src/*"]
     },
