--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -6,11 +6,15 @@
   },
   "typesVersions": {
     "*": {
-      "*": ["./src/*"]
+      "*": [
+        "./src/*"
+      ]
     }
   },
   "dependencies": {
     "@sa/axios": "workspace:*",
-    "@sa/utils": "workspace:*"
+    "@sa/utils": "workspace:*",
+    "@vueuse/core": "^13.5.0",
+    "vue": "^3.5.17"
   }
 }
