--- a/apps/api/.env.production
+++ b/apps/api/.env.production
@@ -18,7 +18,7 @@ DB_HOST=mysql
 DB_PORT=3307
 DB_DATABASE=nest_admin
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=123456
 DB_SYNCHRONIZE=false
 DB_LOGGING=["error"]
 
